--- a/bs-config.json
+++ b/bs-config.json
@@ -1,6 +1,6 @@
 {
   "server": {
-    "baseDir": "src",
+    "baseDir": ["src", "dist"],
     "routes": {
       "/node_modules": "node_modules"
     }
